--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <title>London Trip</title>
 </head>
 <body>
+  
   <!-- Header -->
   <Header>
-
-
+    <h1>Il mio Viaggio a Londra</h1>
+    <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="Foto Londra 1">
+    <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="Foto Londra 2">
+    <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="Foto Londra 3">
+    <hr>
   </Header>
   <!-- /Header -->
   
