--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <th>Descrizione</th>
             <th>Costo</th>
           </tr>
-          
+
         </thead>
         <!-- /Intestazione Tabella -->
 
@@ -81,6 +81,23 @@
 
     </section>
     <!-- /Prima Sezione -->
+
+    <!-- Seconda Sezione -->
+    <section>
+
+      <h3>Cose da fare</h3>
+      
+      <ul>
+        <li>Visitare la Tower of London &#10008;</li>
+        <li>Visitare Greenwich &#10004;</li>
+        <li>Asoltare un artista di strada a Covent Garden &#10004;</li>
+        <li>Mangiare il tipico Fish and Chips inglese &#10008;</li>
+      </ul>
+
+      <hr>
+
+    </section>
+    <!-- /Seconda Sezione -->
 
 
   </Main>
