--- a/index.html
+++ b/index.html
@@ -99,6 +99,44 @@
     </section>
     <!-- /Seconda Sezione -->
 
+    <!-- Terza Sezione -->
+    <section>
+
+      <h3>Info utili:</h3>
+
+      <ol>
+        
+        <li>
+          <p>Numeri utili di emergenza</p>
+          <ul>
+            <li><strong>999</strong> - Emergenza</li>
+            <li><strong>101</strong> - Numero Polizia</li>
+            <li><strong>111</strong> - Numero Assistenza Medica</li>
+          </ul>
+        </li>
+
+        <li>
+          <p>Hotel</p>
+          <ul>
+            <li><strong>Nome Hotel:</strong> Buckingham Palace</li>
+            <li><strong>Indirizzo Hotel:</strong> Westmainster, London SW1A 1AA, Regno Unito</li>
+          </ul>
+        </li>
+
+        <li>
+          <p>Aereo</p>
+          <ul>
+            <li><strong>Volo di Andata:</strong> Y1234X, ore 9:30 da Milano Malpensa</li>
+            <li><strong>Volo di ritorno:</strong> Y1236X, ore 18:30 da London Heathrow</li>
+          </ul>
+        </li>
+      </ol>
+
+      <hr>
+
+
+    </section>
+    <!-- /Terza Sezione -->
 
   </Main>
   <!-- /Main -->
