[Update] Third Section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
       <h3>Info utili:</h3>
 
+      <!-- Elenco puntato -->
       <ol>
         
         <li>
@@ -130,10 +131,11 @@
             <li><strong>Volo di ritorno:</strong> Y1236X, ore 18:30 da London Heathrow</li>
           </ul>
         </li>
+      
       </ol>
+      <!-- /Elenco puntato -->
 
       <hr>
-
 
     </section>
     <!-- /Terza Sezione -->
