--- a/index.html
+++ b/index.html
@@ -145,7 +145,11 @@
  
   <!-- Footer -->
   <Footer>
+    
+    <h3>Le foto</h3>
 
+    <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Foto 1">
+    <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Foto 2">
 
   </Footer>
   <!-- /Footer -->
